--- a/tainanmemory/index.html
+++ b/tainanmemory/index.html
@@ -5005,10 +5005,13 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;iframe src=&quot;https://tina458615.github.io/tainanmemory/ar/index.html&quot; width=&quot;100%&quot; height=&quot;500px&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot; allow=&quot;camera&quot;&gt;&lt;/iframe&gt;
 
 根據食譜的提示進行探索！
-【第一句】一開始會先朝向「西北」，這時候你的右手邊為A。
+&lt;div style=&quot;text-align: left;&quot;&gt;【第一句】一開始會先朝向「西北」，這時候你的右手邊為A。
 【第二句】接著你轉過來，面對「正北」，這時候右邊為B。
 【第三句】最後你再轉，面向「東北」，你的右手邊為C。
-找出A、B、C三個點交匯處，是哪個建築設施的位置：&lt;&lt;textbox &#39;_answer&#39; &#39;輸入名稱&#39; autofocus&gt;&gt;
+&lt;/div&gt;
+找出A、B、C三個點交匯處，是哪個建築設施的位置：
+&lt;&lt;textbox &#39;_answer&#39; &#39;輸入名稱&#39; autofocus&gt;&gt;
+
 &lt;&lt;button &#39;輸入&#39;&gt;&gt;
 	&lt;&lt;set $answer to _answer.trim()&gt;&gt;
 	&lt;&lt;if $answer is &#39;寧南門&#39;&gt;&gt;
