--- a/tainanmemory/index.html
+++ b/tainanmemory/index.html
@@ -280,7 +280,7 @@ body.black #nav a {
   min-width: unset;
   position: absolute;
   left: 5vw;
-  bottom: 8vh;
+  bottom: 5vh;
 }
 
 /* 左右選擇按鈕 */
@@ -1486,7 +1486,7 @@ input[type=text] {
 }
 
 input[type=text]:hover {
-  color: var(--text_hover);
+  color: var(--text_hover)!important;
   background-color: #333;
 }
 
@@ -4912,7 +4912,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第一幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages3&quot; _VNOptions &quot;ch1關卡1&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
-/*[[ch1關卡1]]*/</tw-passagedata><tw-passagedata pid="38" name="ch1關卡1" tags="center nofooter one autosave" position="2650,300" size="100,100">&lt;&lt;set _options = [&quot;一&quot;, &quot;二&quot;, &quot;三&quot;, &quot;四&quot;, &quot;五&quot;, &quot;六&quot;, &quot;七&quot;, &quot;八&quot;, &quot;九&quot;, &quot;十&quot;]&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;1-1尋找石碑(1)&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+/*[[ch1關卡1]]*/</tw-passagedata><tw-passagedata pid="38" name="ch1關卡1" tags="center nofooter one autosave" position="2650,300" size="100,100">&lt;&lt;set _options = [&quot;一&quot;, &quot;二&quot;, &quot;三&quot;, &quot;四&quot;, &quot;五&quot;, &quot;六&quot;, &quot;七&quot;, &quot;八&quot;, &quot;九&quot;, &quot;十&quot;]&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;1-1尋找石碑(1)&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;尋找《大南門菜市埔示禁碑記》，
 從碑文內容找出香油錢為多少？
 
@@ -4976,7 +4976,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;老人孫子.png&lt;/img&gt;&lt;p&gt;我便向這位老人家詢問為何求籤的經過。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;老人孫子.png&lt;/img&gt;&lt;p&gt;但這對爺孫似乎對我突然的提問感到詫異，不願意透露更多原因。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;scene&gt;default_scene.png&lt;/scene&gt;&lt;img&gt;對聯.png&lt;/img&gt;&lt;p&gt;此時，我又看見另一個畫面。&lt;/p&gt;
-&lt;name&gt;&lt;/name&gt;&lt;img&gt;對聯.png&lt;/img&gt;&lt;p&gt;難道，這就是城隍爺所說，我的特殊能力嗎？&lt;/p&gt;</tw-passagedata><tw-passagedata pid="48" name="ch1關卡2" tags="center nofooter one autosave" position="2800,300" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;1-2尋找石碑(2)&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+&lt;name&gt;&lt;/name&gt;&lt;img&gt;對聯.png&lt;/img&gt;&lt;p&gt;難道，這就是城隍爺所說，我的特殊能力嗎？&lt;/p&gt;</tw-passagedata><tw-passagedata pid="48" name="ch1關卡2" tags="center nofooter one autosave" position="2800,300" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;1-2尋找石碑(2)&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;從碑林中找到【萬＿同＿所】的字句，
 幫城玄回想起完整的文字。
 
@@ -5001,7 +5001,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第二幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages6&quot; _VNOptions &quot;ch2關卡1&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
-/*[[ch2關卡1]]*/</tw-passagedata><tw-passagedata pid="54" name="OSPages3" tags="" position="1500,1800" size="100,100">&lt;OS&gt;孫子不願吐露真相，&lt;br&gt;你只好轉換策略，&lt;br&gt;請教城隍廟的夥伴。&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="55" name="ch2關卡1" tags="center nofooter one autosave" position="2975,300" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;2-1尋找阿香姊的食譜(1)&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+/*[[ch2關卡1]]*/</tw-passagedata><tw-passagedata pid="54" name="OSPages3" tags="" position="1500,1800" size="100,100">&lt;OS&gt;孫子不願吐露真相，&lt;br&gt;你只好轉換策略，&lt;br&gt;請教城隍廟的夥伴。&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="55" name="ch2關卡1" tags="center nofooter one autosave" position="2975,300" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;2-1尋找阿香姊的食譜(1)&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;iframe src=&quot;https://tina458615.github.io/tainanmemory/ar/index.html&quot; width=&quot;100%&quot; height=&quot;500px&quot; frameborder=&quot;0&quot; scrolling=&quot;no&quot; allow=&quot;camera&quot;&gt;&lt;/iframe&gt;
 
 根據食譜的提示進行探索！
@@ -5034,10 +5034,9 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第二幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages7&quot; _VNOptions &quot;ch2關卡2&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
-/*[[ch2關卡2]]*/</tw-passagedata><tw-passagedata pid="60" name="ch2關卡2" tags="center nofooter one autosave" position="3125,300" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;2-1尋找阿香姊的食譜(2)&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+/*[[ch2關卡2]]*/</tw-passagedata><tw-passagedata pid="60" name="ch2關卡2" tags="center nofooter one autosave" position="3125,300" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;2-1尋找阿香姊的食譜(2)&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;
 總算找到食譜的位置，但食譜被鎖在箱子。
-請從城牆迷宮中，使用卦象的符號，找出箱子的密碼。
 
 &lt;&lt;button &quot;開始解鎖&quot;&gt;&gt;&lt;&lt;goto &quot;密碼鎖&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;&lt;/timed&gt;&gt;
@@ -5397,9 +5396,9 @@ Set up your profile, stats and meters, and other relevant information here!
   &lt;&lt;if passage() is &quot;ch2關卡3-2&quot;&gt;&gt;&lt;span class=&quot;tiptext&quot;&gt;在大算盤上撥動珠子位置與圖片符合，就能計算出數值囉！&lt;/span&gt;&lt;div id=&quot;choicebutton&quot;&gt;&lt;&lt;button &#39;關閉&#39;&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;&lt;&lt;/if&gt;&gt;
   &lt;&lt;if passage() is &quot;ch3關卡1&quot;&gt;&gt;&lt;span class=&quot;tiptext&quot;&gt;什麼動物的叫聲如狂風席捲大地般？其矯健身姿更讓其他野獸見狀紛紛驚逃？&lt;/span&gt;&lt;div id=&quot;choicebutton&quot;&gt;&lt;&lt;button &#39;關閉&#39;&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;&lt;&lt;/if&gt;&gt;
   &lt;&lt;if passage() is &quot;ch3關卡2&quot;&gt;&gt;&lt;span class=&quot;tiptext&quot;&gt;到平面圖上各代碼的位置，看哪一個地方有虎，就是答案囉！&lt;/span&gt;&lt;div id=&quot;choicebutton&quot;&gt;&lt;&lt;button &#39;關閉&#39;&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;&lt;&lt;/if&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="116" name="密碼鎖" tags="center nofooter one autosave notran" position="3225,300" size="100,100">&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;2-1尋找阿香姊的食譜(2)&lt;/h3&gt;&lt;/div&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="116" name="密碼鎖" tags="center nofooter one autosave notran" position="3225,300" size="100,100">&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;2-1尋找阿香姊的食譜(2)&lt;/h3&gt;&lt;/div&gt;
 
-&lt;&lt;set $boxnum to [1, 7, 2, 5]&gt;&gt;
+&lt;&lt;set $boxnum to [1, 7, 2, 5]&gt;&gt;請從城牆迷宮中，使用卦象的符號，找出箱子的密碼。
 &lt;div id=&quot;lock-container&quot;&gt;
 &lt;svg id=&quot;svg&quot; viewBox=&quot;0 0 500 500&quot; width=&quot;100%&quot; height=&quot;100%&quot;&gt;
 	&lt;defs&gt;
