--- a/tainanmemory/index.html
+++ b/tainanmemory/index.html
@@ -6571,8 +6571,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;/span&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;button &#39;繼續&#39; &#39;ch2關卡3&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/timed&gt;&gt;
 /* [[ch2-4]] */</tw-passagedata><tw-passagedata pid="61" name="ch2關卡2提示" tags="" position="300,1000" size="100,100">弌是弍的少一筆，代表一，所以答案是一兩。</tw-passagedata><tw-passagedata pid="62" name="ch2關卡3" tags="center nofooter one autosave white" position="3400,300" size="100,100">&lt;&lt;set _options = [&quot;請選擇&quot;,&quot;府城建城牆&quot;, &quot;府城拆城牆&quot;, &quot;重建府城門&quot;]&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡2-3&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
-&lt;&lt;timed 1s t8n&gt;&gt;你來到【南門城牆】，請找出照片中的對應場景，
-並解讀其中隱藏的【17．2．5】三個數字之意涵。
+&lt;&lt;timed 1s t8n&gt;&gt;你來到【南門城牆】，請找出照片中的對應場景，並解讀其中隱藏的【17．2．5】三個數字之意涵。
 &lt;img src=&quot;media/img/說明牌.png&quot; width=&quot;100%&quot;&gt;
 
 【神秘數字】與&lt;&lt;listbox &quot;_answer&quot; autoselect&gt;&gt;&lt;&lt;optionsfrom _options&gt;&gt;&lt;&lt;/listbox&gt;&gt;有關
