--- a/tainanmemory/index.html
+++ b/tainanmemory/index.html
@@ -6436,7 +6436,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;name&gt;貓醬&lt;/name&gt;&lt;img&gt;貓醬.png&lt;/img&gt;&lt;p&gt;不過，你曾經在府城生活過。&lt;br&gt;殘留的記憶碎片還散落在這片土地。&lt;/p&gt;
 &lt;name&gt;城玄&lt;/name&gt;&lt;img&gt;城玄.png&lt;/img&gt;&lt;p&gt;記憶碎片⋯⋯&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我愣住了。那究竟是何物？&lt;/p&gt;
-&lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;為了找回更多「記憶碎片」，我依循貓醬的指引，踏上了尋憶之旅。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="24" name="開場-2" tags="nofooter title nonav center" position="1100,400" size="100,100">&lt;&lt;removeclass &quot;#story&quot; &quot;blackbg&quot;&gt;&gt;&lt;&lt;set _VNOptions to { animation: &quot;text-wipe-in&quot;, showHistory: false }&gt;&gt;\
+&lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;為了找回更多「記憶碎片」，我依循貓醬的指引，踏上了尋憶之旅。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="24" name="開場-2" tags="nofooter title nonav center black" position="1100,400" size="100,100">&lt;&lt;removeclass &quot;#story&quot; &quot;blackbg&quot;&gt;&gt;&lt;&lt;set _VNOptions to { animation: &quot;text-wipe-in&quot;, showHistory: false }&gt;&gt;\
 &lt;&lt;VNText &quot;OSPages1&quot; _VNOptions &quot;ch0-0&quot;&gt;&gt;
 /* [[ch0-0]] */</tw-passagedata><tw-passagedata pid="25" name="ch0關卡1提示" tags="" position="100,900" size="100,100">答案就是&quot;威靈公&quot;。</tw-passagedata><tw-passagedata pid="26" name="ch0-2" tags="nofooter nonav black title center" position="1700,400" size="100,100">&lt;&lt;set _VNOptions to { animation: &quot;text-wipe-in&quot;, showHistory: false }&gt;&gt;\
 &lt;&lt;VNText &quot;OSPages2&quot; _VNOptions &quot;ch1-0&quot;&gt;&gt;
