--- a/tainanmemory/index.html
+++ b/tainanmemory/index.html
@@ -1700,6 +1700,7 @@ input,
 select,
 textarea {
   color: var(--text);
+  background-color: var(--text_hover) !important;
 }
 
 button {
@@ -1736,7 +1737,7 @@ input[type="text"] {
 
 input[type="text"]:hover {
   color: var(--text_hover) !important;
-  background-color: #333;
+  background-color: #333 !important;
 }
 
 textarea {
