--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -1729,7 +1729,7 @@ select {
 }
 select:hover {
   color: white;
-  background-color: #333;
+  background-color: #333!important;
   border-color: #eee;
 }
 
