--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -365,7 +365,7 @@ body.end {
 #tipbtn a {
   width: 3em !important;
   min-width: unset;
-  position: absolute;
+  position: fixed;;
   left: 5vw;
   bottom: 5vh;
 }
@@ -6426,7 +6426,7 @@ Set up your profile, stats and meters, and other relevant information here!
 /*[[開場-1.1]]*/</tw-passagedata><tw-passagedata pid="20" name="ch0-0" tags="center nobr black autosave" position="1400,400" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;img src=&quot;media/img/初章.png&quot;&gt;&lt;/div&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;img src=&quot;media/img/南門公園.png&quot; class=&quot;storyimage&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
-&lt;div&gt;&lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages1&quot; _VNOptions &quot;ch1關卡1&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;/div&gt;
+&lt;div&gt;&lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages1&quot; _VNOptions &quot;ch0-2&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;/div&gt;
 /*[[ch0-2]]*/</tw-passagedata><tw-passagedata pid="21" name="開場-1.1" tags="nofooter title nonav diary autosave" position="1100,200" size="100,100">&lt;&lt;set _VNOptions to { animation: &quot;wipe-reveal&quot;, textBoxId: &quot;story-box&quot;, delay: 0, duration: 1300, showHistory: false }&gt;&gt;\
 &lt;&lt;VNText &quot;diaryPages1.1&quot; _VNOptions &quot;開場-1.2&quot;&gt;&gt;
 &lt;div id=&quot;diary-footer&quot;&gt;&lt;/div&gt;
