--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -6540,7 +6540,7 @@ Set up your profile, stats and meters, and other relevant information here!
 腦海中卻突然閃過一段文字。&lt;/p&gt;
 &lt;p&gt;熟悉的頭痛再次湧上，
 我眼前浮現幾個斑駁的字——
-【萬＿同＿歸所】&lt;/p&gt;</tw-passagedata><tw-passagedata pid="48" name="ch2-2" tags="center nobr black autosave" position="1700,1200" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
+【萬＿同＿所】&lt;/p&gt;</tw-passagedata><tw-passagedata pid="48" name="ch2-2" tags="center nobr black autosave" position="1700,1200" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;img src=&quot;media/img/第一章.png&quot;&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages6&quot; _VNOptions &quot;ch1關卡2&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
