--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -104,7 +104,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="城垣尋憶" startnode="2" creator="Twine" creator-version="2.10.0" format="SugarCube" format-version="2.37.3" ifid="7ccbfd3e-0385-42ab-a0ee-0392e8fdeecd" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* IMPORT FONTS
+	<tw-storydata name="城垣尋憶" startnode="2" creator="Twine" creator-version="2.10.0" format="SugarCube" format-version="2.37.3" ifid="7ccbfd3e-0385-42ab-a0ee-0392e8fdeecd" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* IMPORT FONTS
 comment --
 webfont import
 */
@@ -6445,7 +6445,7 @@ Set up your profile, stats and meters, and other relevant information here!
 /* [[ch1-0]] */</tw-passagedata><tw-passagedata pid="27" name="ch1-0" tags="nofooter title nonav diary autosave" position="1100,600" size="100,100">&lt;&lt;set _VNOptions to { animation: &quot;wipe-reveal&quot;, textBoxId: &quot;story-box&quot;, delay: 0, duration: 1300, showHistory: false }&gt;&gt;\
 &lt;&lt;VNText &quot;diaryPages2&quot; _VNOptions &quot;ch1-1&quot;&gt;&gt;
 &lt;div id=&quot;diary-footer&quot;&gt;&lt;/div&gt;
-/* [[ch1-1]] */</tw-passagedata><tw-passagedata pid="28" name="OSPages1" tags="" position="1200,400" size="100,100">&lt;OS&gt;初章&lt;br&gt;黑與白&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="29" name="OSPages2" tags="" position="1800,400" size="100,100">&lt;OS&gt;第一章&lt;br&gt;紅色俠女&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="30" name="diaryPages2" tags="" position="1200,600" size="100,100">&lt;p&gt;我跟隨貓醬來到南門碑林。
+/* [[ch1-1]] */</tw-passagedata><tw-passagedata pid="28" name="OSPages1" tags="" position="1200,400" size="100,100">&lt;OS&gt;初章&lt;br&gt;黑與白&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="29" name="OSPages2" tags="" position="1800,400" size="100,100">&lt;OS&gt;第一章&lt;br&gt;紅色俠女&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="30" name="diaryPages2" tags="" position="1200,600" size="100,100">&lt;p&gt;我跟隨貓醬來到大碑林。
 碑林之間，一抹鮮紅忽然閃過，
 是一名身著豔麗紅衣的少女。&lt;/p&gt;
 &lt;p&gt;她神情張揚，步伐急切，彷彿正在尋找什麼東西。
@@ -6474,7 +6474,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages3&quot; _VNOptions &quot;ch1-2&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
 /*[[ch1-2]]*/</tw-passagedata><tw-passagedata pid="33" name="ch1關卡1" tags="center nofooter one autosave white" position="2000,700" size="100,100">&lt;&lt;set _options = [&quot;一&quot;, &quot;二&quot;, &quot;三&quot;, &quot;四&quot;, &quot;五&quot;, &quot;六&quot;, &quot;七&quot;, &quot;八&quot;, &quot;九&quot;, &quot;十&quot;]&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡1-1&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
-&lt;&lt;timed 1s t8n&gt;&gt;前往【南門碑林】，找到《大南門菜市埔示禁碑記》，並從碑文中找出「香油錢」的數量。
+&lt;&lt;timed 1s t8n&gt;&gt;前往【大碑林】，找到《大南門菜市埔示禁碑記》，並從碑文中找出「香油錢」的數量。
 
 香油錢為
 &lt;span class=&quot;levelinput&quot;&gt;&lt;&lt;listbox &quot;_answer&quot; autoselect&gt;&gt;&lt;&lt;optionsfrom _options&gt;&gt;&lt;&lt;/listbox&gt;&gt;文錢&lt;/span&gt;
@@ -6517,7 +6517,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;name&gt;火爆娘子&lt;/name&gt;&lt;img&gt;火爆娘子.png&lt;/img&gt;&lt;p&gt;最近鄰近的菜市場出了點糾紛，&lt;br&gt;地方惡霸竟勒索攤販，&lt;br&gt;繳納十文香油錢。&lt;/p&gt;
 &lt;name&gt;火爆娘子&lt;/name&gt;&lt;img&gt;火爆娘子.png&lt;/img&gt;&lt;p&gt;我記得碑林裡，&lt;br&gt;似乎刻過關於香油錢的數目，&lt;br&gt;但我怎麼找，&lt;br&gt;都找不到那方碑文⋯⋯&lt;/p&gt;
 &lt;name&gt;城玄&lt;/name&gt;&lt;img&gt;城玄.png&lt;/img&gt;&lt;p&gt;好，我來幫忙妳找看看。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="43" name="ch1關卡2" tags="center nofooter one autosave white" position="2000,1300" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡1-2&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
-&lt;&lt;timed 1s t8n&gt;&gt;請在【南門碑林】中，尋找刻有「萬＿同＿所」字樣的石碑。
+&lt;&lt;timed 1s t8n&gt;&gt;請在【大碑林】中，尋找刻有「萬＿同＿所」字樣的石碑。
 
 城玄回想起的字句是：&lt;&lt;textbox &#39;_answer&#39; &#39;輸入完整五個字&#39; autofocus&gt;&gt;
 
