--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -104,7 +104,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="城垣尋憶" startnode="2" creator="Twine" creator-version="2.10.0" format="SugarCube" format-version="2.37.3" ifid="7ccbfd3e-0385-42ab-a0ee-0392e8fdeecd" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* IMPORT FONTS
+	<tw-storydata name="城垣尋憶" startnode="2" creator="Twine" creator-version="2.10.0" format="SugarCube" format-version="2.37.3" ifid="7ccbfd3e-0385-42ab-a0ee-0392e8fdeecd" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* IMPORT FONTS
 comment --
 webfont import
 */
@@ -1283,7 +1283,7 @@ body.slideWin {
   height: calc(100% - 60px);
   text-align: center;
   position: relative;
-  padding: 45px 30px;
+  padding: 50px 30px;
   /* 基底背景 */
   background: linear-gradient(135deg, transparent 8px, rgb(6 87 84 / 30%) 0) top
       left,
@@ -6464,8 +6464,6 @@ Set up your profile, stats and meters, and other relevant information here!
   &lt;&lt;link [img[media/img/第三章.png]]&gt;&gt;&lt;&lt;goto &#39;ch3-6&#39;&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;&lt;link &#39;【關卡3-1】&#39;&gt;&gt;&lt;&lt;goto &#39;ch3關卡1&#39;&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;&lt;link &#39;【關卡3-2】&#39;&gt;&gt;&lt;&lt;goto &#39;ch3關卡2-1&#39;&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
-
-  &lt;&lt;link [img[media/img/終章.png]]&gt;&gt;&lt;&lt;goto &#39;ch3-9&#39;&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
   
   &lt;&lt;link [img[media/img/提示返回.png]]&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="32" name="ch1-1" tags="center nobr black autosave" position="1400,600" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
@@ -6619,7 +6617,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我喘息片刻，火爆娘子卻準備告辭。&lt;br&gt;臨行前，她叮囑我。&lt;/p&gt;
 &lt;name&gt;火爆娘子&lt;/name&gt;&lt;img&gt;火爆娘子.png&lt;/img&gt;&lt;p&gt;若想再尋記憶，去大南門吧，&lt;br&gt;也許有人知道你的過往。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;說完，她瀟灑離去。&lt;/p&gt;
-&lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我和貓醬繼續前往大南門。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="65" name="OSPages4" tags="" position="1500,1725" size="100,100">&lt;OS&gt;第二章&lt;br&gt;五行與食譜&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="66" name="ch3-0" tags="autosave center nobr black" position="1100,2000" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
+&lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我和貓醬繼續前往大南門。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="65" name="OSPages4" tags="" position="1500,1725" size="100,100">&lt;OS&gt;第二章&lt;br&gt;食譜與神祕數字&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="66" name="ch3-0" tags="autosave center nobr black" position="1100,2000" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;img src=&quot;media/img/第二章.png&quot;&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages9.5&quot; _VNOptions &quot;ch2關卡1&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
