--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -6449,7 +6449,7 @@ Set up your profile, stats and meters, and other relevant information here!
 是一名身著豔麗紅衣的少女。&lt;/p&gt;
 &lt;p&gt;她神情張揚，步伐急切，彷彿正在尋找什麼東西。
 我心生警惕，悄悄想避開她的視線。
-沒料到，她厲聲喝止⋯⋯&lt;/p&gt;</tw-passagedata><tw-passagedata pid="31" name="選擇章節" tags="" position="100,700" size="100,100">&lt;div&gt;
+沒料到，她厲聲喝止⋯⋯&lt;/p&gt;</tw-passagedata><tw-passagedata pid="31" name="選擇章節" tags="" position="100,700" size="100,100">&lt;div style=&quot;font-size: 1.2em; line-height: 2;&quot;&gt;
   &lt;&lt;link [img[media/img/初章.png]]&gt;&gt;&lt;&lt;goto &#39;開場-1.1&#39;&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
 
   &lt;&lt;link [img[media/img/第一章.png]]&gt;&gt;&lt;&lt;goto &#39;ch1-0&#39;&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
