--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -1298,7 +1298,7 @@ body.slideWin {
   border-image-repeat: stretch;
   border-image-outset: 2px;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: auto;
 }
 #slideWinContent a {
   color: #ffffff;
