--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -358,14 +358,14 @@ body.end {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin: 60px 0;
+  margin: 20px 0 0 0;
 }
 
 /* 提示按鈕 */
 #tipbtn a {
   width: 3em !important;
   min-width: unset;
-  position: fixed;;
+  position: fixed;
   left: 5vw;
   bottom: 5vh;
 }
@@ -1729,7 +1729,7 @@ select {
 }
 select:hover {
   color: white;
-  background-color: #333!important;
+  background-color: #333 !important;
   border-color: #eee;
 }
 
