--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -6761,7 +6761,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我低頭沉思。這組數字究竟隱藏著什麼秘密？&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;scene&gt;南門城牆.png&lt;/scene&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;在前往「小南城隍廟」的途中，&lt;br&gt;貓醬猛地停在一塊說明牌前，尾巴一翹。&lt;br&gt;&lt;/p&gt;
 &lt;name&gt;貓醬&lt;/name&gt;&lt;img&gt;貓醬.png&lt;/img&gt;&lt;p&gt;城玄，這塊說明牌上，&lt;br&gt;好像提到跟數字有關的事，喵。&lt;/p&gt;
-&lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我俯身細看牌面寫著城門沿革，&lt;br&gt;下方的段落裡，幾個數字特別醒目：&lt;br&gt;&lt;em&gt;17・2・5&lt;/em&gt;&lt;/p&gt;
+&lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我俯身細看牌面寫著城門沿革，&lt;br&gt;下方的段落裡，幾個數字特別醒目：&lt;br&gt;17・2・5&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我仔細查看這組數字的意涵是什麼。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="92" name="diaryPages4" tags="black center nobr" position="1200,2300" size="100,100">&lt;p&gt;我們終於在大南門的磚縫裡，
 找到阿香姐遺失的食譜。
 誰料，
