--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -6801,7 +6801,7 @@ Set up your profile, stats and meters, and other relevant information here!
 /* [[開場-2]] */</tw-passagedata><tw-passagedata pid="95" name="diaryPages1.2" tags="" position="1500,200" size="100,100">&lt;p&gt;當我竭力掙脫泥土時，第一道光終於刺入眼底⋯⋯&lt;/p&gt;
 &lt;p&gt;&lt;img src=&quot;media/img/貓醬出現1.png&quot; class=&quot;diaryimage&quot;&gt;
 而那個身影，或者該說，那隻生物。&lt;/p&gt;
-&lt;p&gt;&lt;img src=&quot;media/img/貓醬出現2.png&quot; class=&quot;diaryimage&quot;&gt;便自顧自地、帶著傲氣出現在我面前。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="96" name="關卡錯誤" tags="" position="100,800" size="100,100">答錯了喔！請再試一次！</tw-passagedata><tw-passagedata pid="97" name="關卡提示" tags="" position="200,800" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;p&gt;&lt;img src=&quot;media/img/貓醬出現2.png&quot; class=&quot;diaryimage&quot;&gt;便自顧自地出現在我面前。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="96" name="關卡錯誤" tags="" position="100,800" size="100,100">答錯了喔！請再試一次！</tw-passagedata><tw-passagedata pid="97" name="關卡提示" tags="" position="200,800" size="100,100">&lt;&lt;nobr&gt;&gt;
   &lt;&lt;if passage() is &quot;ch1關卡1&quot;&gt;&gt;&lt;span class=&quot;tiptext&quot;&gt;碑文長這樣，去找找吧！&lt;img src=&quot;media/img/大南門菜市埔示禁碑記.jpg&quot; width=&quot;100%&quot;&gt;&lt;/span&gt;&lt;br&gt;
   &lt;div id=&quot;choicebutton&quot;&gt;&lt;&lt;link [img[media/img/提示返回.png]]&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;&lt;link [img[media/img/提示答案.png]]&gt;&gt;&lt;&lt;run slideWin(&quot;關卡答案&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/div&gt;&lt;&lt;/if&gt;&gt;
   &lt;&lt;if passage() is &quot;ch1關卡2&quot;&gt;&gt;&lt;span class=&quot;tiptext&quot;&gt;碑文長這樣，去找找吧！&lt;img src=&quot;media/img/萬善同歸所.jpg&quot; width=&quot;100%&quot;&gt;&lt;/span&gt;&lt;br&gt;
